# QtDuckDBDriver

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
QtDuckDBDriver/: CMakeLists.txt  Qt5Compat.h  QtDuckDBDriver.cpp  QtDuckDBDriver.h  duckdb.json  smain.cpp
cmake/: DetectQtVersion.cmake  EnableProjectCMP0048.cmake  QtDuckDBProperties.cmake
examples/: CMakeLists.txt
examples/AutoCompletion/: CMakeLists.txt  Readme.md  main.cpp
examples/TableWidget/: CMakeLists.txt  Readme.md  main.cpp
tests/: CMakeLists.txt  driver_tests.h  main.cpp  main_qttest.cpp
tests/helpers/: duckdb_sut.h  rapidcheck_generators.h  temp_database.h  test_database.h
tests/qttest/: error_handling_test.cpp  error_handling_test.h  features_test.cpp  features_test.h  model_test.cpp  model_test.h  prepared_statements_test.cpp  prepared_statements_test.h  query_execution_test.cpp  query_execution_test.h  raw_handle_test.cpp  raw_handle_test.h  schema_test.cpp  schema_test.h
tests/rapidcheck/: identifier_escaping_test.cpp  null_handling_test.cpp  prepared_statements_test.cpp  stateful_lifecycle_test.cpp  stateful_prepared_test.cpp  stateful_transaction_test.cpp  type_roundtrip_test.cpp
